<resources>
    <string name="app_name">FitnessAssistant</string>

    <string name="integer_format">%d</string>
    <string name="float_format">%.2f</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="drawer_profile">Profile</string>
    <string name="drawer_progress">Progress</string>
    <string name="drawer_exercises">Exercises</string>
    <string name="drawer_diet">Diet</string>
    <string name="drawer_settings">Settings</string>

    <!-- Profile -->

    <string name="profile_name_label">Name</string>
    <string name="profile_name_hint">Enter your name</string>
    <string name="profile_name_error">Name must not be empty.</string>

    <string name="profile_gender_label">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <string name="profile_date_of_birth_label">Date Of Birth</string>






    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>


    <string name="empty_profile_text">You have not created a profile.</string>
    <string name="empty_profile_button">Create Profile</string>

    <string name="date_picker_title">User\'s date of birth</string>

    <!-- Body -->
    <string name="body_measurements_label">Measurements</string>
    <string name="body_measurements_error">Measurement must be non-negative and smaller than 2 147 483 647.</string>
    <string name="body_others_label">Others</string>
    <string name="skinfold_unit">mm</string>
    <string name="body_use_last_values">Use last values</string>
    <string name="body_biceps_hint">Biceps</string>
    <string name="body_triceps_hint">Triceps</string>
    <string name="body_subscapular_hint">Subscapular</string>
    <string name="body_suprailiac_hint">Suprailiac</string>

    <string name="body_height_label">Height</string>
    <string name="body_height_hint">Your height</string>
    <string name="body_height_format">%1$.1f m</string>
    <string name="body_height_unit">m</string>

    <string name="body_weight_label">Weight</string>
    <string name="body_weight_hint">Your weight</string>
    <string name="body_weight_format">%1$.1f kg</string>
    <string name="body_weight_unit">kg</string>

    <!-- Body Index -->
    <string name="bodyindex_percentfat_format">%%Fat: %.2f%%</string>
    <string name="bodyindex_fatmass">Fat Mass: %.1f kg</string>
    <string name="bodyindex_leanmusclemass">Muscle Mass: %.1f kg</string>
    <string name="bodyindex_bmi">BMI: %.2f kg/m^2</string>
    <string name="bodyindex_bmr">BMR: %.1f cal/day</string>

    <!-- Graph -->
    <string name="progress_graph_title">Body Index</string>
    <string name="percent_fat_series">% Body Fat</string>

    <!-- Warnings -->
    <string name="body_delete_warning">Are you sure you want to delete this record?</string>

</resources>
