<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/measurement_label"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/body_measurements_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/body_biceps_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/measurement_label">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/body_biceps_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/body_biceps_hint"
                android:nextFocusForward="@+id/body_triceps_edit"
                android:selectAllOnFocus="true"
                android:imeOptions="actionNext"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/skinfold_unit"
            app:layout_constraintBottom_toBottomOf="@+id/body_biceps_til"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/body_triceps_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body_biceps_til">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/body_triceps_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/body_triceps_hint"
                android:nextFocusForward="@+id/body_subscapular_edit"
                android:selectAllOnFocus="true"
                android:imeOptions="actionNext"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/skinfold_unit"
            app:layout_constraintBottom_toBottomOf="@+id/body_triceps_til"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/body_subscapular_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body_triceps_til">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/body_subscapular_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/body_subscapular_hint"
                android:nextFocusForward="@+id/body_suprailiac_edit"
                android:selectAllOnFocus="true"
                android:imeOptions="actionNext"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/skinfold_unit"
            app:layout_constraintBottom_toBottomOf="@+id/body_subscapular_til"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/body_suprailiac_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body_subscapular_til">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/body_suprailiac_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/body_suprailiac_hint"
                android:nextFocusForward="@+id/body_height_edit"
                android:selectAllOnFocus="true"
                android:imeOptions="actionNext"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/skinfold_unit"
            app:layout_constraintBottom_toBottomOf="@+id/body_suprailiac_til"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView7"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/body_others_label"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body_suprailiac_til" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/body_height_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/body_height_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:hint="@string/body_height_hint"
                android:nextFocusForward="@+id/body_weight_edit"
                android:selectAllOnFocus="true"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/body_height_unit"
            app:layout_constraintBottom_toBottomOf="@+id/body_height_til"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/body_weight_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body_height_til">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/body_weight_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:hint="@string/body_weight_hint"
                android:selectAllOnFocus="true"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/body_weight_unit"
            app:layout_constraintBottom_toBottomOf="@+id/body_weight_til"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
